--- a/android/build.gradle
+++ b/android/build.gradle
@@ -6,20 +6,15 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.google.gms.google-services:4.3.0'
-        classpath 'com.android.tools.build:gradle:7.2.2'
-        classpath 'com.google.gms.google-services:4.3.0'
-        // START: FlutterFire Configuration
-        classpath 'com.google.gms.google-services:4.3.0'
-        classpath 'com.google.gms.google-services:4.3.0'
-        // END: FlutterFire Configuration
+        classpath 'com.android.tools.build:gradle:7.3.0'
+        classpath 'com.google.gms:google-services:4.3.15'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
-plugins {
-  id 'com.google.gms.google-services' version '4.3.0' apply false
-}
+// plugins {
+//   id 'com.google.gms.google-services' version '4.3.0' apply false
+// }
 
 allprojects {
     repositories {
