--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   firebase_analytics: ^10.4.4
   firebase_database: ^10.2.4
   firebase_auth: ^4.7.2
+  firebase_messaging: ^14.6.5
 
 dev_dependencies:
   flutter_test:
