--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   firebase_database: ^10.2.4
   firebase_auth: ^4.7.2
   firebase_messaging: ^14.6.5
+  device_info_plus: ^3.2.3
 
 dev_dependencies:
   flutter_test:
