--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,13 @@ dependencies:
   firebase_auth: ^4.7.2
   firebase_messaging: ^14.6.5
   device_info_plus: ^3.2.3
+  flutter_launcher_icons: ^0.13.1
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon/DSS.png"
+  min_sdk_android: 21
 
 dev_dependencies:
   flutter_test:
