--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,26 +8,26 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cloud_firestore: ^4.8.4
+  cloud_firestore: ^4.9.0
   firebase_core: ^2.15.0
   firebase_analytics: ^10.4.4
   firebase_database: ^10.2.4
   firebase_auth: ^4.7.2
   firebase_messaging: ^14.6.5
-  device_info_plus: ^3.2.3
+  device_info_plus: ^9.0.3
   flutter_launcher_icons: ^0.13.1
 
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "assets/icon/DSS.png"
+  image_path: "assets/icon/dracula.png"
   min_sdk_android: 21
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.2
-  
+
 flutter:
   assets:
     - assets/images/
